# finance-system

./: CLAUDE.md  README.md
.claude/skills/abrir-pr/: SKILL.md
api/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  compose.yaml  pyproject.toml
api/app/: config.py  health.py  main.py  postgres.py
api/tests/: conftest.py  test_health_route.py  test_postgres_readiness.py
docs/adr/: ADR-0001-core-python-fastapi.md  ADR-0002-react-no-front.md  ADR-0003-monorepo.md
docs/epicos/: r0-esqueleto-no-ar.md
docs/process/: estrategia-branch-pr.md  estrategia-feature-flags.md  estrategia-testes-integracao.md  guia-do-fluxo.md  operar-board.md  processo-desenvolvimento-sdd.md  quando-usar-cada-documento.md
docs/prompts/: decompor-spec.md  gerar-adr.md  gerar-epico.md  gerar-rfc.md  gerar-spec.md  planejar-release.md  verificar-contra-spec.md
docs/rfc/: RFC-0001-criar-sistema-financas.md
docs/roadmaps/: roadmap-features-sistema.md  roadmap-infra-devops.md
docs/setup/: setup-github.md
docs/specs/R0/: r0-31-esqueleto-local-ponta-a-ponta.md
docs/templates/: adr.md  epico.md  rfc.md  spec.md
web/: CLAUDE.md
